--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
 
         .team-section {
             text-align: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 100px 24px;
+            border-radius: 12px;
+            margin: 0 24px;
         }
 
         .team-section p {
@@ -234,7 +238,7 @@
 
     <header class="header">
         <div class="container">
-            <div class="logo">Top of Mind<span>Labs</span></div>
+            <div class="logo">Top of Mind <span>Labs</span></div>
             <nav class="nav">
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
@@ -278,6 +282,18 @@
                         <h3>Due Diligence & Technical Advisory</h3>
                         <p>Leverage our deep technical expertise during the due diligence process to assess the technological maturity, scalability, and AI potential of target acquisitions.</p>
                     </div>
+                    <div class="service-card">
+                        <h3>Custom Model Development</h3>
+                        <p>We design and train bespoke machine learning models tailored to your unique data and business objectives, going beyond off-the-shelf solutions to create a true competitive advantage.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Cloud & API Cost Reduction</h3>
+                        <p>Our experts analyze your cloud infrastructure and API usage to identify and implement significant cost-saving opportunities without compromising performance or scalability.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>AI Performance Optimization</h3>
+                        <p>We fine-tune and optimize your existing AI models and data pipelines, improving accuracy, reducing latency, and maximizing the overall performance of your AI-driven systems.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -293,8 +309,8 @@
 
         <section id="contact" class="section">
             <div class="container">
-                <h2 class="section-title">Let's Talk</h2>
-                <form class="contact-form" action="mailto:contact@topofmindlabs.com" method="post" enctype="text/plain">
+                <h2 class="section-title">Let's Work Together</h2>
+                <form class="contact-form" action="mailto:nick@gettom.io" method="post" enctype="text/plain">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" required>
